Route POST,PATCH,DELETE de rooms
